# enterprise/api/v1/models/network_attachment_list.go
@@ -1,144 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-// Copyright (C) Isovalent, Inc. - All Rights Reserved.
-//
-// NOTICE: All information contained herein is, and remains the property of
-// Isovalent Inc and its suppliers, if any. The intellectual and technical
-// concepts contained herein are proprietary to Isovalent Inc and its suppliers
-// and may be covered by U.S. and Foreign Patents, patents in process, and are
-// protected by trade secret or copyright law.  Dissemination of this information
-// or reproduction of this material is strictly forbidden unless prior written
-// permission is obtained from Isovalent Inc.
-
-package models
-
-import (
-	"context"
-	stderrors "errors"
-	"strconv"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag/jsonutils"
-	"github.com/go-openapi/swag/typeutils"
-)
-
-// NetworkAttachmentList List of network attachments
-//
-// swagger:model NetworkAttachmentList
-type NetworkAttachmentList struct {
-
-	// Networks this pod is attached to
-	Attachments []*NetworkAttachmentElement `json:"attachments"`
-
-	// Name of the pod which is attached to these networks
-	PodName string `json:"pod-name,omitempty"`
-
-	// Namespace of the pod which is attached to these networks
-	PodNamespace string `json:"pod-namespace,omitempty"`
-}
-
-// Validate validates this network attachment list
-func (m *NetworkAttachmentList) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateAttachments(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *NetworkAttachmentList) validateAttachments(formats strfmt.Registry) error {
-	if typeutils.IsZero(m.Attachments) { // not required
-		return nil
-	}
-
-	for i := 0; i < len(m.Attachments); i++ {
-		if typeutils.IsZero(m.Attachments[i]) { // not required
-			continue
-		}
-
-		if m.Attachments[i] != nil {
-			if err := m.Attachments[i].Validate(formats); err != nil {
-				ve := new(errors.Validation)
-				if stderrors.As(err, &ve) {
-					return ve.ValidateName("attachments" + "." + strconv.Itoa(i))
-				}
-				ce := new(errors.CompositeError)
-				if stderrors.As(err, &ce) {
-					return ce.ValidateName("attachments" + "." + strconv.Itoa(i))
-				}
-
-				return err
-			}
-		}
-
-	}
-
-	return nil
-}
-
-// ContextValidate validate this network attachment list based on the context it is used
-func (m *NetworkAttachmentList) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.contextValidateAttachments(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *NetworkAttachmentList) contextValidateAttachments(ctx context.Context, formats strfmt.Registry) error {
-
-	for i := 0; i < len(m.Attachments); i++ {
-
-		if m.Attachments[i] != nil {
-
-			if typeutils.IsZero(m.Attachments[i]) { // not required
-				return nil
-			}
-
-			if err := m.Attachments[i].ContextValidate(ctx, formats); err != nil {
-				ve := new(errors.Validation)
-				if stderrors.As(err, &ve) {
-					return ve.ValidateName("attachments" + "." + strconv.Itoa(i))
-				}
-				ce := new(errors.CompositeError)
-				if stderrors.As(err, &ce) {
-					return ce.ValidateName("attachments" + "." + strconv.Itoa(i))
-				}
-
-				return err
-			}
-		}
-
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *NetworkAttachmentList) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return jsonutils.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *NetworkAttachmentList) UnmarshalBinary(b []byte) error {
-	var res NetworkAttachmentList
-	if err := jsonutils.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
