# enterprise/api/v1/server/restapi/network/get_network_attachment.go
@@ -1,64 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-// Copyright (C) Isovalent, Inc. - All Rights Reserved.
-//
-// NOTICE: All information contained herein is, and remains the property of
-// Isovalent Inc and its suppliers, if any. The intellectual and technical
-// concepts contained herein are proprietary to Isovalent Inc and its suppliers
-// and may be covered by U.S. and Foreign Patents, patents in process, and are
-// protected by trade secret or copyright law.  Dissemination of this information
-// or reproduction of this material is strictly forbidden unless prior written
-// permission is obtained from Isovalent Inc.
-
-package network
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime/middleware"
-)
-
-// GetNetworkAttachmentHandlerFunc turns a function with the right signature into a get network attachment handler
-type GetNetworkAttachmentHandlerFunc func(GetNetworkAttachmentParams) middleware.Responder
-
-// Handle executing the request and returning a response
-func (fn GetNetworkAttachmentHandlerFunc) Handle(params GetNetworkAttachmentParams) middleware.Responder {
-	return fn(params)
-}
-
-// GetNetworkAttachmentHandler interface for that can handle valid get network attachment params
-type GetNetworkAttachmentHandler interface {
-	Handle(GetNetworkAttachmentParams) middleware.Responder
-}
-
-// NewGetNetworkAttachment creates a new http.Handler for the get network attachment operation
-func NewGetNetworkAttachment(ctx *middleware.Context, handler GetNetworkAttachmentHandler) *GetNetworkAttachment {
-	return &GetNetworkAttachment{Context: ctx, Handler: handler}
-}
-
-/*
-	GetNetworkAttachment swagger:route GET /network/attachment network getNetworkAttachment
-
-Retrieve the network attachment for a pod
-*/
-type GetNetworkAttachment struct {
-	Context *middleware.Context
-	Handler GetNetworkAttachmentHandler
-}
-
-func (o *GetNetworkAttachment) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
-	route, rCtx, _ := o.Context.RouteInfo(r)
-	if rCtx != nil {
-		*r = *rCtx
-	}
-	params := NewGetNetworkAttachmentParams()
-	if err := o.Context.BindValidRequest(r, route, &params); err != nil { // bind params
-		o.Context.Respond(rw, r, route.Produces, route, err)
-		return
-	}
-
-	res := o.Handler.Handle(params) // actually handle the request
-
-	o.Context.Respond(rw, r, route.Produces, route, res)
-
-}
